--- a/app/src/main/res/layout/fragment_auth.xml
+++ b/app/src/main/res/layout/fragment_auth.xml
@@ -1,38 +1,126 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.silive.deepanshu.notestash.ui.auth.AuthFragment">
+
     <!-- TODO Design of page -->
+
+    <android.support.constraint.Group
+        android:id="@+id/group"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginTop="60dp"
+        android:background="#eeeeee"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
     <Button
         android:id="@+id/auth_button_login"
-        android:layout_width="match_parent"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:text="Login" />
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:paddingEnd="30dp"
+        android:paddingStart="30dp"
+        android:text="Login"
+        app:layout_constraintLeft_toLeftOf="@+id/group"
+        app:layout_constraintRight_toRightOf="@+id/group"
+        app:layout_constraintTop_toTopOf="@+id/group" />
 
     <Button
         android:id="@+id/auth_button_signup"
-        android:layout_width="match_parent"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
-        android:text="Signup" />
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:paddingEnd="30dp"
+        android:paddingStart="30dp"
+        android:text="Sign up"
+        app:layout_constraintLeft_toLeftOf="@+id/group"
+        app:layout_constraintRight_toRightOf="@+id/group"
+        app:layout_constraintTop_toBottomOf="@+id/auth_button_login" />
+
+    <TextView
+        android:id="@+id/auth_or_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="or"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="@+id/group"
+        app:layout_constraintRight_toRightOf="@+id/group"
+        app:layout_constraintTop_toBottomOf="@id/auth_button_signup" />
+
+    <TextView
+        android:id="@+id/auth_with_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Login with"
+        android:textSize="12sp"
+        app:layout_constraintLeft_toLeftOf="@+id/group"
+        app:layout_constraintRight_toRightOf="@+id/group"
+        app:layout_constraintTop_toBottomOf="@id/auth_or_textView" />
+
+    <View
+        android:layout_width="60dp"
+        android:layout_height="2dp"
+        android:background="#c7c7c7"
+        app:layout_constraintBottom_toBottomOf="@+id/auth_or_textView"
+        app:layout_constraintLeft_toLeftOf="@+id/group"
+        app:layout_constraintRight_toLeftOf="@+id/auth_with_textView" />
+
+    <View
+        android:layout_width="60dp"
+        android:layout_height="2dp"
+        android:background="#c7c7c7"
+        app:layout_constraintBottom_toBottomOf="@+id/auth_or_textView"
+        app:layout_constraintLeft_toRightOf="@+id/auth_with_textView"
+        app:layout_constraintRight_toRightOf="@+id/group" />
+
+    <View
+        android:id="@+id/vertical_barrier"
+        android:layout_width="2dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="20dp"
+        android:background="#c7c7c7"
+        app:layout_constraintBottom_toBottomOf="@+id/group"
+        app:layout_constraintLeft_toLeftOf="@+id/group"
+        app:layout_constraintRight_toRightOf="@+id/group"
+        app:layout_constraintTop_toBottomOf="@+id/auth_with_textView" />
 
     <Button
         android:id="@+id/auth_button_google"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Google" />
+        android:layout_marginBottom="20dp"
+        android:text="Google"
+        app:layout_constraintBottom_toBottomOf="@+id/group"
+        app:layout_constraintLeft_toLeftOf="@+id/group"
+        app:layout_constraintRight_toLeftOf="@+id/vertical_barrier"
+        app:layout_constraintTop_toBottomOf="@id/auth_with_textView" />
 
     <Button
         android:id="@+id/auth_button_facebook"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Facebook" />
+        android:layout_marginBottom="20dp"
+        android:text="Facebook"
+        app:layout_constraintBottom_toBottomOf="@+id/group"
+        app:layout_constraintLeft_toRightOf="@+id/vertical_barrier"
+        app:layout_constraintRight_toRightOf="@+id/group"
+        app:layout_constraintTop_toBottomOf="@id/auth_with_textView" />
 
     <Button
         android:id="@+id/auth_button_skip"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Skip" />
+        android:background="#ffffff"
+        android:text="Skip >>"
+        app:layout_constraintBottom_toBottomOf="" />
 
-</LinearLayout>
+
+</android.support.constraint.ConstraintLayout>
